--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" type="image/svg+xml" href="/fatog-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aqua Farm</title>
+    <title>FATOG Fishery</title>
   </head>
   <body>
     <div id="root"></div>
